Minor Updates and Code Cleanup

--- a/Codes/PAS_AAS_CAAPM_GrpSched.ipynb
+++ b/Codes/PAS_AAS_CAAPM_GrpSched.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "9936215f",
    "metadata": {
     "execution": {
@@ -41,10 +41,8 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import random\n",
-    "import math\n",
-    "import sys"
+    "import math"
    ]
   },
   {
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "5d7bfcdf",
    "metadata": {
     "execution": {
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "1a6490cc",
    "metadata": {
     "execution": {
@@ -148,15 +146,15 @@
    },
    "outputs": [],
    "source": [
-    "df_machines = pd.read_csv('/kaggle/input/btp-dataset-200-250/Machines_250.csv')\n",
-    "df_applications = pd.read_csv('/kaggle/input/btp-dataset-200-250/Applications_200.csv')\n",
-    "df_anti_affinity_matrix = pd.read_csv('/kaggle/input/btp-dataset-200-250/Anti_Affinity_Matrix_200_250.csv')\n",
-    "df_user_affinity_matrix = pd.read_csv('/kaggle/input/btp-dataset-200-250/Affinity_Matrix_200_250.csv')\n",
+    "df_machines = pd.read_csv('../Datasets/Real-life Dataset/Machines_250.csv')\n",
+    "df_applications = pd.read_csv('../Datasets/Real-life Dataset/Applications_200.csv')\n",
+    "df_anti_affinity_matrix = pd.read_csv('../Datasets/Real-life Dataset/Anti_Affinity_Matrix_200_250.csv')\n",
+    "df_user_affinity_matrix = pd.read_csv('../Datasets/Real-life Dataset/Affinity_Matrix_200_250.csv')\n",
     "\n",
-    "# df_machines = pd.read_csv('/kaggle/input/random-dataset/Machines.csv')\n",
-    "# df_applications = pd.read_csv('/kaggle/input/random-dataset/Applications.csv')\n",
-    "# df_anti_affinity_matrix = pd.read_csv('/kaggle/input/random-dataset/Anti_Affinity_Matrix.csv')\n",
-    "# df_user_affinity_matrix = pd.read_csv('/kaggle/input/random-dataset/Affinity_Matrix.csv')\n",
+    "# df_machines = pd.read_csv('../Datasets/Synthetic Dataset/Machines.csv')\n",
+    "# df_applications = pd.read_csv('../Datasets/Synthetic Dataset/Applications.csv')\n",
+    "# df_anti_affinity_matrix = pd.read_csv('../Datasets/Synthetic Dataset/Anti_Affinity_Matrix.csv')\n",
+    "# df_user_affinity_matrix = pd.read_csv('../Datasets/Synthetic Dataset/Affinity_Matrix.csv')\n",
     "\n",
     "df_machines = df_machines.loc[:, ~df_machines.columns.str.contains('^Unnamed')]\n",
     "df_applications = df_applications.loc[:, ~df_applications.columns.str.contains('^Unnamed')]\n",
@@ -189,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "8efbb4cb",
    "metadata": {
     "execution": {
@@ -240,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "dd3eeb6c",
    "metadata": {
     "execution": {
@@ -269,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "a055663c",
    "metadata": {
     "execution": {
@@ -297,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "7324fa1c",
    "metadata": {
     "execution": {
@@ -324,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "353e9330",
    "metadata": {
     "execution": {
@@ -351,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "fd633564",
    "metadata": {
     "execution": {
@@ -379,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "85a0665b",
    "metadata": {
     "execution": {
@@ -410,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "e4d96309",
    "metadata": {
     "execution": {
@@ -454,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "1adb0f8e",
    "metadata": {
     "execution": {
@@ -483,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "e071ddd4",
    "metadata": {
     "execution": {
@@ -523,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "a72857b5",
    "metadata": {
     "execution": {
@@ -554,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "33dc1494",
    "metadata": {
     "execution": {
@@ -584,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "df090ce3",
    "metadata": {
     "execution": {
@@ -615,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "acf53b36",
    "metadata": {
     "execution": {
@@ -677,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "05be8411",
    "metadata": {
     "execution": {
@@ -723,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "94be4df9",
    "metadata": {
     "execution": {
@@ -756,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "9ce047ac",
    "metadata": {
     "execution": {
@@ -812,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "5504056a",
    "metadata": {
     "execution": {
@@ -835,9 +833,9 @@
     "def Genetic_Algorithm(df_machines,df_applications,df_affinity_matrix,df_anti_affinity_matrix):\n",
     "#     population initialization\n",
     "    population = generate_population(df_machines,df_applications,df_affinity_matrix,df_anti_affinity_matrix)\n",
-    "    population[0] = Greedy1(df_machines,df_applications,df_affinity_matrix,df_anti_affinity_matrix)\n",
-    "    population[1] = Greedy2(df_machines,df_applications,df_affinity_matrix,df_anti_affinity_matrix)\n",
-    "    population[2] = Greedy3(df_machines,df_applications,df_affinity_matrix,df_anti_affinity_matrix)\n",
+    "    population[0] = PAS(df_machines,df_applications,df_affinity_matrix,df_anti_affinity_matrix)\n",
+    "    population[1] = AAS(df_machines,df_applications,df_affinity_matrix,df_anti_affinity_matrix)\n",
+    "    population[2] = Proposed_Approach(df_machines,df_applications,df_affinity_matrix,df_anti_affinity_matrix)\n",
     "    score_list = find_score(population,df_machines,df_applications,df_affinity_matrix,df_anti_affinity_matrix)\n",
     "    avg_cost_over_iters = []\n",
     "    avg_cost_over_iters.append(sum(score_list)/len(score_list))\n",
@@ -884,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "4ccde15c",
    "metadata": {
     "execution": {
@@ -957,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "3a44b7d5",
    "metadata": {
     "execution": {
@@ -994,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "7cd247db",
    "metadata": {
     "execution": {
@@ -1063,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "c77d3b2d",
    "metadata": {
     "execution": {
@@ -1092,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "121e1e13",
    "metadata": {
     "execution": {
@@ -1112,7 +1110,7 @@
    },
    "outputs": [],
    "source": [
-    "def Greedy1(df_machines, df_applications, df_affinity_matrix, df_anti_affinity_matrix, knee = 0.45):\n",
+    "def PAS(df_machines, df_applications, df_affinity_matrix, df_anti_affinity_matrix, knee = 0.45):\n",
     "    df_applications_copy = df_applications.copy().sort_values(by = ['CPU', 'IO', 'NW', 'Memory'], ascending = [False, False, False, False])\n",
     "    df_machines_copy = df_machines.copy()\n",
     "    df_allocation_matrix = pd.DataFrame(np.zeros((df_applications.shape[0], df_machines.shape[0])))\n",
@@ -1138,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "cdce2ebd",
    "metadata": {
     "execution": {
@@ -1158,7 +1156,7 @@
    },
    "outputs": [],
    "source": [
-    "def Greedy2(df_machines, df_applications, df_affinity_matrix, df_anti_affinity_matrix):\n",
+    "def AAS(df_machines, df_applications, df_affinity_matrix, df_anti_affinity_matrix):\n",
     "    df_applications_copy = df_applications.copy().sort_values(by = ['CPU', 'IO', 'NW', 'Memory'], ascending = [False, False, False, False])\n",
     "    df_machines_copy = df_machines.copy()\n",
     "    df_allocation_matrix = pd.DataFrame(np.zeros((df_applications.shape[0], df_machines.shape[0])))\n",
@@ -1183,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "42fccfff",
    "metadata": {
     "execution": {
@@ -1203,7 +1201,7 @@
    },
    "outputs": [],
    "source": [
-    "def Greedy3(df_machines, df_applications, df_affinity_matrix, df_anti_affinity_matrix):\n",
+    "def Proposed_Approach(df_machines, df_applications, df_affinity_matrix, df_anti_affinity_matrix):\n",
     "    df_applications_copy = df_applications.copy().sort_values(by = ['CPU', 'IO', 'NW', 'Memory'], ascending = [False, False, False, False])\n",
     "    df_machines_copy = df_machines.copy()\n",
     "    df_allocation_matrix = pd.DataFrame(np.zeros((df_applications.shape[0], df_machines.shape[0])))\n",
@@ -1275,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "82a489a1",
    "metadata": {
     "execution": {
@@ -1318,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "3588d0b5",
    "metadata": {
     "execution": {
@@ -1422,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "191d88ac",
    "metadata": {
     "execution": {
@@ -1442,7 +1440,7 @@
    },
    "outputs": [],
    "source": [
-    "# for algo in [Group_Sched, Greedy1, Greedy2, Greedy3]:\n",
+    "# for algo in [Group_Sched, PAS, AAS, Proposed_Approach]:\n",
     "#     print(algo.__name__)\n",
     "#     pc = []\n",
     "#     ac = []\n",
@@ -1500,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "87f4096a",
    "metadata": {
     "execution": {
@@ -1520,7 +1518,7 @@
    },
    "outputs": [],
    "source": [
-    "# for algo in [Group_Sched, Greedy1, Greedy2, Greedy3]:\n",
+    "# for algo in [Group_Sched, PAS, AAS, Proposed_Approach]:\n",
     "#     print(algo.__name__)\n",
     "#     pc = []\n",
     "#     ac = []\n",
@@ -1578,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "dc820f63",
    "metadata": {
     "execution": {
@@ -1598,7 +1596,7 @@
    },
    "outputs": [],
    "source": [
-    "# for algo in [Group_Sched, Greedy1, Greedy2, Greedy3]:\n",
+    "# for algo in [Group_Sched, PAS, AAS, Proposed_Approach]:\n",
     "#     print(algo.__name__)\n",
     "#     pc = []\n",
     "#     ac = []\n",
@@ -1656,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "0bf240f3",
    "metadata": {
     "execution": {
@@ -1676,7 +1674,7 @@
    },
    "outputs": [],
    "source": [
-    "# for algo in [Group_Sched, Greedy1, Greedy2, Greedy3]:\n",
+    "# for algo in [Group_Sched, PAS, AAS, Proposed_Approach]:\n",
     "#     print(algo.__name__)\n",
     "#     pc = []\n",
     "#     ac = []\n",
@@ -1734,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "486d923d",
    "metadata": {
     "execution": {
@@ -1754,7 +1752,7 @@
    },
    "outputs": [],
    "source": [
-    "# for algo in [Group_Sched, Greedy1, Greedy2, Greedy3]:\n",
+    "# for algo in [Group_Sched, PAS, AAS, Proposed_Approach]:\n",
     "#     print(algo.__name__)\n",
     "#     tc = []\n",
     "#     for ALPHA in [0.5, 1, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]:\n",
@@ -1800,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "d77949a9",
    "metadata": {
     "execution": {
@@ -1820,7 +1818,7 @@
    },
    "outputs": [],
    "source": [
-    "# for algo in [Group_Sched, Greedy1, Greedy2, Greedy3]:\n",
+    "# for algo in [Group_Sched, PAS, AAS, Proposed_Approach]:\n",
     "#     print(algo.__name__)\n",
     "#     pc = []\n",
     "#     ac = []\n",
@@ -1828,7 +1826,7 @@
     "#     aasr = []\n",
     "#     au = []\n",
     "#     for percent in [10, 20, 30, 40, 50]:\n",
-    "#         df_anti_affinity_matrix = pd.read_csv('/kaggle/input/anti-affinity-matrices/Anti_Affinity_Matrix_' + str(percent) + '.csv')\n",
+    "#         df_anti_affinity_matrix = pd.read_csv('../Datasets/Anti-Affinity Matrices/Anti_Affinity_Matrix_' + str(percent) + '.csv')\n",
     "#         df_anti_affinity_matrix = df_anti_affinity_matrix.loc[:, ~df_anti_affinity_matrix.columns.str.contains('^Unnamed')]\n",
     "#         df_anti_affinity_matrix.columns = pd.to_numeric(df_anti_affinity_matrix.columns, errors='coerce')\n",
     "\n",
@@ -1900,7 +1898,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.9"
   },
   "papermill": {
    "default_parameters": {},
