--- a/Plots/Plots.ipynb
+++ b/Plots/Plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "id": "bcb57d01",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "7f296f54",
    "metadata": {},
    "outputs": [
@@ -93,11 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "8a89840d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pc - power cost\n",
+    "# ac - affinity cost\n",
+    "# tc - total cost\n",
+    "# aasr - average affinity satisfaction ratio\n",
+    "# au - average utilization\n",
+    "\n",
     "# PAS\n",
     "pas_pc = np.array([696.3157894110966, 987.7429846298583, 1269.3813536425682, 1591.8824812977623, 1894.3428056577786])\n",
     "pas_ac = np.array([32.19791695152632, 34.228045495572815, 36.16603218349185, 39.41093620178248, 41.57786833478102])\n",
@@ -136,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "id": "49a9c5e0",
    "metadata": {},
    "outputs": [
@@ -194,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "id": "816f1204",
    "metadata": {},
    "outputs": [
@@ -252,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "id": "071f694c",
    "metadata": {},
    "outputs": [
@@ -310,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "425ab875",
    "metadata": {},
    "outputs": [
@@ -379,11 +385,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "4548177e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pc - power cost\n",
+    "# ac - affinity cost\n",
+    "# tc - total cost\n",
+    "# aasr - average affinity satisfaction ratio\n",
+    "# au - average utilization\n",
+    "\n",
     "# PAS\n",
     "pas_pc = np.array([4918.493844875653, 5541.941439827593, 6189.179161369315, 6878.607903088714, 7586.170465181796])\n",
     "pas_ac = np.array([403.57141467042834, 420.0262643074807, 423.45478565978505, 430.45081597751727, 432.5226570932647])\n",
@@ -422,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "ef29e040",
    "metadata": {},
    "outputs": [
@@ -480,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "id": "1bfecaa9",
    "metadata": {},
    "outputs": [
@@ -538,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "id": "99cb1c82",
    "metadata": {},
    "outputs": [
@@ -596,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "51f44524",
    "metadata": {},
    "outputs": [
@@ -665,11 +677,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "id": "43aa3b90",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pc - power cost\n",
+    "# ac - affinity cost\n",
+    "# tc - total cost\n",
+    "# aasr - average affinity satisfaction ratio\n",
+    "# au - average utilization\n",
+    "\n",
     "# PAS\n",
     "pas_pc = np.array([1910.8934942197322, 2005.6972792453314, 2106.1501237347948, 2223.4652418657106, 2332.308879786375])\n",
     "pas_ac = np.array([68.02276355973515, 89.3400482652626, 109.82229782686795, 134.21433581084605, 159.52481880078292])\n",
@@ -708,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "id": "c1a1c930",
    "metadata": {},
    "outputs": [
@@ -766,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "id": "ebfb2852",
    "metadata": {},
    "outputs": [
@@ -824,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
    "id": "a90334dc",
    "metadata": {},
    "outputs": [
@@ -882,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "id": "537227f3",
    "metadata": {},
    "outputs": [
@@ -951,11 +969,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "id": "f6cfa3cd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pc - power cost\n",
+    "# ac - affinity cost\n",
+    "# tc - total cost\n",
+    "# aasr - average affinity satisfaction ratio\n",
+    "# au - average utilization\n",
+    "\n",
     "# PAS\n",
     "pas_pc = np.array([7483.880422960205, 7518.265407723621, 7552.2860303182915, 7600.660481858105, 7646.441551775914])\n",
     "pas_ac = np.array([305.51292708207006, 355.27430294574856, 394.36186890571946, 443.33854244346065, 485.82333489833536])\n",
@@ -994,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 19,
    "id": "ef52f0c0",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 20,
    "id": "574274c2",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 21,
    "id": "b2ccc417",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 22,
    "id": "f3d63095",
    "metadata": {},
    "outputs": [
@@ -1237,11 +1261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 23,
    "id": "68b5de39",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tc - total cost\n",
+    "\n",
     "# PAS\n",
     "pas_tc = np.array([7403.5298843267465, 7160.6182168775795, 5217.324877284238, 2788.2082027925608, -2070.025146190793, -6928.2584951741455, -11786.4918441575, -16644.725193140854, -21502.958542124205, -26361.19189110756, -31219.425240090914, -36077.65858907427, -40935.891938057626])\n",
     "\n",
@@ -1260,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 24,
    "id": "2f18013c",
    "metadata": {},
    "outputs": [
@@ -1318,11 +1344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 25,
    "id": "3b92d378",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pc - power cost\n",
+    "# ac - affinity cost\n",
+    "# tc - total cost\n",
+    "# aasr - average affinity satisfaction ratio\n",
+    "# au - average utilization\n",
+    "\n",
     "# PAS\n",
     "pas_pc = np.array([7646.741199339434, 7646.69105866336, 7646.669986856181, 7646.756429199593, 7646.517657836024])\n",
     "pas_ac = np.array([496.3304728970601, 492.8324213323448, 495.8185851244032, 489.3197840756873, 488.3138178238923])\n",
@@ -1361,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 26,
    "id": "8bd19e55",
    "metadata": {},
    "outputs": [
@@ -1419,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 27,
    "id": "87179dd8",
    "metadata": {},
    "outputs": [
@@ -1477,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 28,
    "id": "bbba3e9a",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
